--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@
 #
 certifi==2020.6.20        # via requests
 chardet==3.0.4            # via requests
+falcon==2.0.0             # via -r requirements.in
+gunicorn==20.0.4          # via -r requirements.in
 idna==2.10                # via requests
 influxdb==5.3.0           # via -r requirements.in
 msgpack==0.6.1            # via influxdb
@@ -16,3 +18,6 @@ pytz==2020.1              # via influxdb
 requests==2.24.0          # via influxdb
 six==1.15.0               # via influxdb, python-dateutil
 urllib3==1.25.10          # via requests
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
