--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,17 @@
 certifi==2020.6.20        # via requests
 chardet==3.0.4            # via requests
 falcon==2.0.0             # via -r requirements.in
+geojson==2.5.0            # via pyowm
 gunicorn==20.0.4          # via -r requirements.in
 idna==2.10                # via requests
 influxdb==5.3.0           # via -r requirements.in
 msgpack==0.6.1            # via influxdb
+pyowm==3.1.1              # via -r requirements.in
+pysocks==1.7.1            # via pyowm, requests
 python-dateutil==2.8.1    # via influxdb
 python-decouple==3.3      # via -r requirements.in
 pytz==2020.1              # via influxdb
-requests==2.24.0          # via influxdb
+requests[socks]==2.24.0   # via influxdb, pyowm
 six==1.15.0               # via influxdb, python-dateutil
 urllib3==1.25.10          # via requests
 
